@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Sensative AB Strips-MaZw -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+
+        <!-- Configuration Parameters -->
+        <CommandClass id="112">
+                <Value type="list" index="1" genre="config" label="Notification Type" min="0" max="2" value="1" size="1">
+                        <Help>Define the notification type.</Help>
+                        <Item label="Binary Sensor report" value="0" />
+                        <Item label="Notification report" value="1" />
+                        <Item label="Basic report" value="2" />
+                </Value>
+                <Value type="list" index="2" genre="config" label="LED indication" min="0" max="1" value="1" size="1">
+                        <Help>Specify if LED should indicate special event.</Help>
+                        <Item label="Specific event indication Off" value="0" />
+                        <Item label="On" value="1" />
+                </Value>
+        </CommandClass>
+
+        <!-- Association Groups -->
+        <CommandClass id="133">
+                <Associations num_groups="1">
+                        <Group index="1" max_associations="1" label="Lifeline" />
+                </Associations>
+        </CommandClass>
+
+</Product>
